- New function 'field_format': convenience wrapper for 'grepl' that also supports
  globbing.
- New dataset 'samplonomy' with simulated national account figures of the
  island of Samplonia in long format, and with errors.
- New dataset 'nace_rev2', representing the 2008 (revision 2) NACE hierarchy
  for classification of economic activity.
- Added 'names' method for 'confrontation' objects.
- Fix: option 'lin.ineq.eps' was ignored by 'confront'.
- Fix: indexing of 'confrontation' objects failed in 'lapply' context. (Thanks
  to Matthias Gomolka for GH issue #116)
- Package now depends on R >= 3.5.0 because of the samplonomy RData file.
- Breaking change: for consistency, the '...' argument in 'exists_one' and 'exists_any'
  is replaced with 'by'. This only affects cases with multiple grouping variables.
- Internal: of x$y in reference data are now parsed to x[["y"]] (used to be x[,"y"]).


version 0.9.3
- New functions 'exists_any' and 'exists_one' to help define cross-record 
  validation rules (thanks to David Salgado)
- results of 'sort' and 'aggregate' now include key columns (if any)
- Added accepted JSS paper as vignette.
- Added CITATION file

version 0.9.2
- fixed CRAN issue: plots generated during tests would end up under inst/tinytest
  which is against CRAN policy. (Thanks to Kurt Hornik).

version 0.9.1
- Fixed nonstandard URL caught on CRAN
- Added ORCID, link to book in DESCRIPTION

version 0.9.0
- 'confront' now accepts a vector of 'key's (thanks to Luca Gramaglia for
   suggesting)
- new function 'run_validation_file' runs an R script while capturing output
  of 'confront' calls.
- Objects inheriting from 'confrontation' now store event metadata. See ?event.
- Objects of class 'validator' now store (default) metadata on expression 
  language and rule severity.
- Reference data passed to 'confront' can now be of any type (not just data.frame).
  This breaks code where both 'ref' and 'key' were submitted and reference data is