@@ -21,13 +21,12 @@ Description: Declare data validation rules and data quality indicators;
         analyzed for rule type and connectivity. See also Van der Loo
         and De Jonge (2018) <doi:10.1002/9781118897126>,
         chapter 6.
-Version: 0.9.3.43
+Version: 0.9.3.44
 Depends: R (>= 3.5.0), methods
 URL: https://github.com/data-cleaning/validate
 BugReports: https://github.com/data-cleaning/validate/issues
 Imports: stats, graphics, grid, settings, yaml
-Suggests: tinytest (>= 0.9.6), knitr, bookdown
-Enhances: lumberjack
+Suggests: tinytest (>= 0.9.6), knitr, bookdown, lumberjack
 VignetteBuilder: knitr
 Collate: 
     'rule.R'
